--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
             <div class="sidebar">
                 <h2>Arquivos</h2>
                 <ul class="note-list" id="noteList">
-                    <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Lançamento')">Lançamento</a></li>
+                    <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Indica Investimentos/Campanha de Lançamento/Lançamento')">Lançamento</a></li>
                     <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Live')">Live</a></li>
                     <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Fotos')">Fotos</a></li>
                     <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Indica')">Indica</a></li>
                     <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Marketing')">Marketing</a></li>
-                    <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Vídeos')">Vídeos</a></li>
+                    <li class="note-item"><a href="#" class="note-link" onclick="displayNote('Indica Investimentos/Campanha de Lançamento/Marketing/Vídeos.md')">Vídeos</a></li>
                 </ul>
             </div>
             
